<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (C) 2015 Sony Mobile Communications Inc.
  ~
  ~  All rights reserved.
  ~
  ~  Redistribution and use in source and binary forms, with or without
  ~  modification, are permitted provided that the following conditions are met:
  ~
  ~  1. Redistributions of source code must retain the above copyright notice, this
  ~     list of conditions and the following disclaimer.
  ~
  ~  2. Redistributions in binary form must reproduce the above copyright notice,
  ~     this list of conditions and the following disclaimer in the documentation
  ~     and/or other materials provided with the distribution.
  ~  3. Neither the name of the copyright holder nor the names
  ~     of its contributors may be used to endorse or promote products derived from
  ~     this software without specific prior written permission.
  ~
  ~  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~  ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
  ~  FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~  DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~  SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~  CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~  OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/smarteyeglass_control_width"
    android:layout_height="@dimen/smarteyeglass_control_height"
    android:background="@android:color/black"
    tools:ignore="ContentDescription,PxUsage">

    <RelativeLayout
        android:id="@+id/left_layout"
        android:layout_width="139px"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/speed_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8px"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/iv_speed_icon"
                android:layout_width="30px"
                android:layout_height="30px"
                android:layout_centerVertical="true"
                android:src="@drawable/glass_ic_speed"/>

            <TextView
                android:id="@+id/tv_speed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4px"
                android:layout_toRightOf="@id/iv_speed_icon"
                android:text="XXXXXXXX"
                android:textColor="@android:color/white"
                android:textSize="20px"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/altitude_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/speed_field"
            android:layout_marginTop="2px"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/iv_altitude_icon"
                android:layout_width="30px"
                android:layout_height="30px"
                android:layout_centerVertical="true"
                android:src="@drawable/glass_ic_altitude"/>

            <TextView
                android:id="@+id/tv_altitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4px"
                android:layout_toRightOf="@id/iv_altitude_icon"
                android:text="XXXXXXXX"
                android:textColor="@android:color/white"
                android:textSize="20px"
                android:textStyle="bold"/>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_alert_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_glass_battery_25"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_center_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_alert_icon"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/waiting_connection"
            android:textColor="@android:color/white"
            android:textSize="@dimen/smarteyeglass_text_size_small"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/status_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|right"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/battery"
            android:layout_width="50px"
            android:layout_height="40px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="top|right"
            android:src="@drawable/glass_ic_battery_5"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_battery_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10px"
            android:gravity="center_horizontal"
            android:text="99%"
            android:textColor="@android:color/white"
            android:textSize="4sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/wifi"
            android:layout_width="40px"
            android:layout_height="40px"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/battery"
            android:src="@drawable/glass_ic_signal_5"
            android:visibility="invisible"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/instruction_field"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        android:layout_margin="2px"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_instruction_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/glass_ic_x_small"
            android:layout_marginLeft="5px"
            android:layout_marginRight="5px"
            android:scaleType="center"
            android:visibility="visible"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="right"
            android:textColor="@android:color/white"
            android:textSize="@dimen/smart_eyeglass_text_size_tiny"
            android:textStyle="bold"
            android:text="@string/message_land"
            android:visibility="visible"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recording_field"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/instruction_field"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        android:layout_margin="2px"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_rec_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:layout_marginLeft="5px"
            android:layout_marginRight="5px"
            android:scaleType="center"
            android:src="@drawable/glass_ic_circle_small"
            android:visibility="visible"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_rec_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center_vertical|right"
            android:text="@string/message_stop_rec"
            android:textColor="@android:color/white"
            android:textSize="@dimen/smart_eyeglass_text_size_tiny"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/custom_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35px"
        android:layout_marginLeft="80px"
        android:layout_marginRight="80px"
        android:layout_marginTop="35px"
        android:visibility="visible">
    </RelativeLayout>

    <ImageView
        android:id="@+id/picture_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:layout_marginTop="20px"/>


</RelativeLayout>
